samples/_failures_safe/1761303174_f99f63_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_280b4785.c: In function ‘main’:
./samples/SAFE/__tmp_280b4785.c:174:5: error: expected declaration or statement at end of input
  174 |     while (1) {
      |     ^~~~~
./samples/SAFE/__tmp_280b4785.c:174:5: error: expected declaration or statement at end of input
